# game-of-life

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  draw.c  draw.h  game.c  game.h  main.c  rle.c  rle.h
parser/: rle.c  rle.h  rle.l  rle.y
